--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
   </header>
   <section class="hero">
     <div class="hero-conteiner">
-      <img class="hero-img" src=""></img>
-      <div class="hero-text"></div>
+      <img class="hero-img" src="img/artem.png"></img>
+      <div class="hero-text">
+        <span class="autor">Артем Исламов</span>
+        <h1 class="title">Путь фрилансера</h1>
+        <span class="subtitle">Поколение людей, работающих в интернете</span>
+        <div class="info">
+          <span class="info-text date">Год выпуска: 2019</span>
+          <span class="info-text fotmat">Формат издания: 145х2015</span>
+          <span class="info-text type">Тип обложки: мягкая</span>
+          <span class="info-text age">Возрастные ограничения: 12+</span>
+        </div>
+        <div class="prise">
+          <sapn class="prisetag">490 $</sapn>
+          <a href="#" class="fovorites">Добавить в избранное </a>
+          <div class="buttons">
+            <button class="button button-primary">Читать отрывок</button>
+            <a href="https://www.seaofthieves.com/ru" class="button button-outline">Купить книгу</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   
