--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href="#" class="fovorites">Добавить в избранное </a>
           <div class="buttons">
             <button class="button button-primary">Читать отрывок</button>
-            <a href="https://www.seaofthieves.com/ru" class="button button-outline">Купить книгу</a>
+            <a href="https://store.steampowered.com/sub/841014/" class="button button-outline">Купить книгу</a>
           </div>
         </div>
       </div>
