--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
       </div>
     </div>
   </section>
+  <section>
+    <section class="about">
+      <div class="about-container">
+        <div class="about-book">
+          <h2 class="section-title">О книге</h2>
+        <p class="about-text">
+          Ключ от свободы скрыт в книжном магазине. Данное произведение — золотой ключ от двери с надписью «Фриланс». 
+          Это история сильной личности, выковавшей себя из камня. Это глубоко, честно и про каждого из нас. 
+          С первых страниц автор затрагивает струны души тех самых людей, которые захотели жить по-другому.
+          И самое уникальное то, что в книге раскрыт подробный план к действиям. 
+          Читателю лишь хочется пожелать пристегнуться, прежде чем перелистнуть страницу.
+        </p>
+        </div>
+        <div class="about-autor">
+          <img src="img/autor.png" alt="" class="autor">
+        <div class="autor-bio">
+          <h3 class="autor-name">Артем Исламов</h3>
+          <a href="https://store.steampowered.com/sub/841014/" class="autor-link">https://tapid.pro/islamovartem</a>
+        </div>
+        <p class="autor-text">Автор ютуб канала Glo Academy. Фрилансер, 
+          веб разработчик и веб дизайнер. Преподаватель онлайн-курсов по веб разработке для начинающих</p>
+      </div>
+      </div>
+    </section>
+  </section>
   
 </body>
 </html>
