--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="about">
       <div class="about-container">
         <div class="about-book">
-          <h2 class="section-title">О книге</h2>
+          <h2 class="about-title">О книге</h2>
         <p class="about-text">
           Ключ от свободы скрыт в книжном магазине. Данное произведение — золотой ключ от двери с надписью «Фриланс». 
           Это история сильной личности, выковавшей себя из камня. Это глубоко, честно и про каждого из нас. 
