--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,30 @@
   <title>Путь фрилансера</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="header-container">
       <span class="logo">Книжный</span>
-  <nav class="nav">
-    <a href="#" class="nav-link">Бестселлеры </a>
-    <a href="#" class="nav-link">Подборки</a>
-    <a href="#" class="nav-link">Авторы</a>
-    <a href="#" class="nav-link">Дайджест</a>
-    <a href="#" class="nav-link">Подписка</a>
-    <a href="#" class="nav-link">Выбор редакции</a>
-  </nav>
-  <a href="#" class="login">Личный кабинет</a>
+      <nav class="nav">
+        <a href="https://store.steampowered.com/sub/841014/" class="nav-link">Бестселлеры </a>
+        <a href="https://store.steampowered.com/sub/841014/" class="nav-link">Подборки</a>
+        <a href="https://store.steampowered.com/sub/841014/" class="nav-link">Авторы</a>
+        <a href="https://store.steampowered.com/sub/841014/" class="nav-link">Дайджест</a>
+        <a href="https://store.steampowered.com/sub/841014/" class="nav-link">Подписка</a>
+        <a href="https://store.steampowered.com/sub/841014/" class="nav-link">Выбор редакции</a>
+      </nav>
+      <a href="https://store.steampowered.com/sub/841014/" class="login">Личный кабинет</a>
     </div>
   </header>
   <section class="hero">
     <div class="hero-conteiner">
-      <img class="hero-img" src="img/artem.png"></img>
+      <div class="hero-img">
+        <img src="img/artem.png"></img>
+        <div class="sale">
+          <span>Скидка 30%</span>
+        </div>
+      </div>
       <div class="hero-text">
         <span class="autor">Артем Исламов</span>
         <h1 class="title">Путь фрилансера</h1>
@@ -37,7 +44,7 @@
         </div>
         <div class="prise">
           <sapn class="prisetag">490 $</sapn>
-          <a href="#" class="fovorites">Добавить в избранное </a>
+          <a href="https://store.steampowered.com/sub/841014/" class="fovorites">Добавить в избранное </a>
           <div class="buttons">
             <button class="button button-primary">Читать отрывок</button>
             <a href="https://store.steampowered.com/sub/841014/" class="button button-outline">Купить книгу</a>
@@ -46,31 +53,73 @@
       </div>
     </div>
   </section>
-  <section>
-    <section class="about">
-      <div class="about-container">
-        <div class="about-book">
-          <h2 class="about-title">О книге</h2>
+
+  <section class="about">
+    <div class="about-container">
+      <div class="about-book">
+        <h2 class="about-title">О книге</h2>
         <p class="about-text">
-          Ключ от свободы скрыт в книжном магазине. Данное произведение — золотой ключ от двери с надписью «Фриланс». 
-          Это история сильной личности, выковавшей себя из камня. Это глубоко, честно и про каждого из нас. 
+          Ключ от свободы скрыт в книжном магазине. Данное произведение — золотой ключ от двери с надписью «Фриланс».
+          Это история сильной личности, выковавшей себя из камня. Это глубоко, честно и про каждого из нас.
           С первых страниц автор затрагивает струны души тех самых людей, которые захотели жить по-другому.
-          И самое уникальное то, что в книге раскрыт подробный план к действиям. 
+          И самое уникальное то, что в книге раскрыт подробный план к действиям.
           Читателю лишь хочется пожелать пристегнуться, прежде чем перелистнуть страницу.
         </p>
-        </div>
-        <div class="about-autor">
-          <img src="img/autor.png" alt="" class="autor">
+      </div>
+      <div class="about-autor">
+        <img src="img/autor.png" alt="" class="autor">
         <div class="autor-bio">
           <h3 class="autor-name">Артем Исламов</h3>
           <a href="https://store.steampowered.com/sub/841014/" class="autor-link">https://tapid.pro/islamovartem</a>
         </div>
-        <p class="autor-text">Автор ютуб канала Glo Academy. Фрилансер, 
+        <p class="autor-text">Автор ютуб канала Glo Academy. Фрилансер,
           веб разработчик и веб дизайнер. Преподаватель онлайн-курсов по веб разработке для начинающих</p>
       </div>
-      </div>
-    </section>
+    </div>
   </section>
-  
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="requsites">
+        <h3 class="footer-title">Реквизиты</h3>
+        <ul class="footer-list">
+          <li class="list-item">ИП Исламов Артем Данисович</li>
+          <li class="list-item">ИНН 026408036102</li>
+          <li class="list-item">ОГРНИП 318028000152678</li>
+        </ul>
+      </div>
+      <div class="information">
+        <h3 class="footer-title">Информация</h3>
+        <ul class="footer-list">
+          <li class="list-item">
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>Политика конфиденциальности</a>
+          </li>
+          <li class="list-item">
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>Правила обработки данных</a>
+          </li>
+          <li class="list-item"><a href="https://store.steampowered.com/sub/841014/"
+              class=footer-link>Доровор-оферта</a>
+          </li>
+        </ul>
+      </div>
+      <div class="contacts">
+        <h3 class="footer-title">Контакты</h3>
+        <ul class="footer-list">
+          <li class="list-item">
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>freelance-book@ya.ru</a>
+          </li>
+          <li class="list-item">
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>vk.me/aislam23</a>
+          </li>
+          <li class="list-item">
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>t.me/aislam23</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <a href="#" class='to-top'>
+    <img src="img/arrow.png" alt="Наверх">
+  </a>
 </body>
+
 </html>
