--- a/saiit-main/index.html
+++ b/saiit-main/index.html
@@ -25,17 +25,14 @@
     </div>
   </header>
   <section class="hero">
-    <div class="hero-conteiner">
+    <div class="hero-container">
       <div class="hero-img">
         <img src="img/artem.png"></img>
-        <div class="sale">
-          <span>Скидка 30%</span>
-        </div>
       </div>
       <div class="hero-text">
         <span class="autor">Артем Исламов</span>
         <h1 class="title">Путь фрилансера</h1>
-        <span class="subtitle">Поколение людей, работающих в интернете</span>
+        <span class="subtitle">Поколение людей, работающих в&nbsp;интернете</span>
         <div class="info">
           <span class="info-text date">Год выпуска: 2019</span>
           <span class="info-text fotmat">Формат издания: 145х2015</span>
