--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         <h3 class="footer-title">Контакты</h3>
         <ul class="footer-list">
           <li class="list-item">
-            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>freelance-book@ya.ru</a>
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>freelance-book@gmail.com</a>
           </li>
           <li class="list-item">
-            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>vk.me/aislam23</a>
+            <a href="https://store.steampowered.com/sub/841014/" class=footer-link>instagram.com/aislam23</a>
           </li>
           <li class="list-item">
             <a href="https://store.steampowered.com/sub/841014/" class=footer-link>t.me/aislam23</a>
